# wechat-verify

./: LICENSE  Pipfile  README.md  app.py  main.py  pyproject.toml  runserver.bash  runserver.sh
.github/: dependabot.yml
