[tool.poetry]
name = "wechat-verify"
version = "1.1.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
httptools = "^0.6.1"
fastapi-cdn-host = "^0.7.6"

[tool.poetry.dev-dependencies]
fast-dev-cli = {version=">=0.9.0", python=">=3.10"}

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
